--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "connect-livereload": "^0.6.1",
-    "express": "^4.18.2"
+    "dockerode": "^4.0.2",
+    "express": "^4.21.0",
+    "express-ws": "^5.0.2",
+    "node-gyp": "^10.2.0",
+    "node-pty": "^1.0.0",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "livereload": "^0.9.3",
